# vsa

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: dependencies.cmake  imgui.cmake
libs/sequencer/: imgui_neo_sequencer.h
src/: main.cpp  village_app.hpp
src/simulation/: simulation.cpp  simulation.hpp  simulation_config.cpp  simulation_config.hpp  simulation_controller.cpp  simulation_controller.hpp  simulation_data.cpp  simulation_data.hpp
src/tools/: logger.cpp  logger.hpp  random_engine.cpp  random_engine.hpp
src/ui/: configuration_window.cpp  configuration_window.hpp  main_window.cpp  main_window.hpp  renderer.cpp  renderer.hpp  test_window.cpp  test_window.hpp  window.cpp  window.hpp
src/village/: dish.hpp  entities_registry.cpp  entities_registry.hpp  entity_registrator.cpp  item.hpp  material.hpp  resident.cpp  resident.hpp  storage.cpp  storage.hpp  tool.hpp  village.cpp  village.hpp  village_builder.cpp  village_builder.hpp  village_config.hpp  village_factory.cpp  village_factory.hpp
src/village/dishes/: dish_bread.cpp  dish_bread.hpp
src/village/materials/: material_metal_ore.cpp  material_metal_ore.hpp  material_wheat.cpp  material_wheat.hpp
src/village/residents/: resident_baker.cpp  resident_baker.hpp  resident_blacksmith.cpp  resident_blacksmith.hpp  resident_factory.cpp  resident_factory.hpp  resident_herbalist.cpp  resident_herbalist.hpp  resident_miner.cpp  resident_miner.hpp
src/village/tools/: tool_sickle.cpp  tool_sickle.hpp  tool_triphammer.cpp  tool_triphammer.hpp
